2014-03-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Fix parsing error for "with lp pt 'X', ..."

	* src/boundary.c src/boundary.h src/graphics.c:  Refactor code that
	draws key samples for point plots.

2014-03-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/misc.c (parse_dashtype): Avoid warning about assignment used
	as a condition value.  Some reindentation.

2014-03-19  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotScene.cpp
	src/qtterminal/QtGnuplotItems.h src/qtterminal/qt_term.cpp:
	Implement image clipping for the Qt terminal.  Fix issue with
	unsigned variables in terminal coordinates.  Bug #1349

2014-03-18  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/term.c src/set.c: Fix leaks and invalid reads associated
	with dashtype strings.

2014-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c:  PANGO_WEIGHT_NORMAL is not the same as 0.

	* term/x11.trm:  Make the "persist" flag local to x11 and remember
	what is was the last time we set the terminal to x11.
	Bug #1348

2014-03-18  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotEvent.* src/qtterminal/QtGnuplotWindow.cpp
	src/qtterminal/QtGnuplotWidget.cpp src/qtterminal/QtGnuplotScene.cpp:
	Block events that come from inactive plot widgets.

2014-03-17  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/term_api.h src/misc.c src/misc.h src/save.c src/save.h:
	Parse and save dashtype specification in the form of "-_. " or 
	"(1.0, 0.3, 1.5, 2.0)". In the latter form alternating numbers 
	specify dash lengths and spaces between them.

	* src/gadgets.c src/gadgets.h:
	Added new type custom_dashtype_def and global variable 
	first_custom_dashtype in preparation of new "set dashtype" command.

	* src/gadgets.h src/misc.c src/set.c src/setshow.h src/show.c
	src/tables.c src/tables.h src/term_api.h src/unset.c:
	New commands 'set|show|unset dashtype <N> <dashtype_spec>' to