@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.358 2014/03/15 17:59:31 sfeam Exp $
+dnl $Id: configure.in,v 1.359 2014/03/19 20:42:44 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to disable DEVELOPMENT_RELEASE
@@ -1098,8 +1098,6 @@ AM_CONDITIONAL(BUILD_WXWIDGETS, test "${enable_wxwidgets_ok}" = yes)
 dnl  End wxWidgets terminal
 
 dnl  Allow to disable terminals requiring bitmap support.
-dnl  NB: The copyright notice in bitmap.c is more restrictive
-dnl  than the overall gnuplot copyright.
 AC_ARG_WITH(bitmap_terminals,dnl
 [  --with-bitmap-terminals         dot-matrix printers and pbm])
 AS_IF([test "x${with_bitmap_terminals}" = "xyes"],,
@@ -1107,6 +1105,12 @@ AS_IF([test "x${with_bitmap_terminals}" = "xyes"],,
           [ Define to disable terminals that depend on code in bitmap.c ]))
 AM_CONDITIONAL(BUILD_BITMAP, test "${with_bitmap_terminals}" = yes)
 
+dnl  Allow to include gpic terminal
+AC_ARG_WITH(gpic,dnl
+[  --with-gpic                     gpic terminal])
+AS_IF([test "x${with_gpic}" = "xyes"],
+  AC_DEFINE(HAVE_GPIC,1,
+          [ Define to include support for gpic terminal ],))
 
 AC_ARG_WITH(cairo,dnl
 [  --without-cairo      cairo-based terminals (default enabled)],,
@@ -1392,6 +1396,12 @@ if test "$GGI_SUPPORT" = yes; then
   fi
 else
   AC_MSG_RESULT([  ggi terminal: no (use --with-ggi to enable, requires libggi)])
+fi
+
+if test "$with_gpic" == yes; then
+  AC_MSG_RESULT([  gpic terminal: yes])
+else
+  AC_MSG_RESULT([  gpic terminal: no   (use --with-gpic to enable)])
 fi
 
 if test "$is_msdos" = yes; then
